--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "civitai-slideshow",
   "version": "0.1.0",
+  "homepage": "https://github.com/zoftdev/civitai-slideshow",
+ 
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -24,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
